dev/scss/_settings.scss
@use "variables" as *;
@use "functions" as *;

body.toplevel_page_iloveimg-admin-page, body.media_page_iloveimg-media-page, body.admin_page_iloveimg-watermark-admin-page, body.iloveimg_page_iloveimg-compress-admin-page, body.iloveimg_page_iloveimg-watermark-options-admin-page, body.iloveimg_page_iloveimg-watermark-admin-page, body.media_page_iloveimg-media-watermark-page{
	background-color: $background_color;
	.iloveimg_settings{
		h1{
			padding: 0;
		}

		@include placeholder {
		    opacity: 0.5;
			color: #555D66;
			letter-spacing: 0.45px;
			line-height: 18px;
			font-weight: normal;
		}
		font-family: $font_family;
		*{
			font-size: $body_font_size;
			color: $text_color;
			letter-spacing: $letter_spacing;
			box-sizing: border-box;
		}
		p{
			a{
				&:hover{
					color: $primary_color !important;
				}
			}
		}
		
		p.submit{
			margin-bottom: 10px;
		}
		h3{
			margin-top: 0;
		}
		.logo{
			width: 125px;
			height: 32px;
			display: block;
			margin: 30px 30px;
		}
		.iloveimg_settings__overview{
			background-color: #fff;
			padding: 30px;
			box-shadow: $box_shadow;
			border-radius: $radius;
			margin-bottom: 30px;
			.forget{
				display: block;
				color: $primary_color;
				text-decoration: none;
				margin-bottom: 10px;
			}
			.iloveimg_settings__overview__account{
				display: flex;
				flex-direction: row;
				align-items: flex-start;
				justify-content: space-between;
				@media  (max-width: $width_small){
					flex-direction: column;
				}
				.iloveimg_settings__overview__account__picture{
					margin-right: 30px;
					width: 100%;
					height: 238px;
					background: url("../images/iloveimg_picture_login.svg") no-repeat left center;
					background: auto 100%;
					@media  (max-width: $width_small){
						margin-bottom: 20px;
					}
				}
				&.iloveimg_settings__overview__account-login{
					> img{
						width: calc(100% - 240px - 30px -  56px);
						max-width: 870px;
					}
					> form{
						width: 240px;
						margin-right: 56px;
					}
				}
				&.iloveimg_settings__overview__account-register{

					> img{
						width: calc(100% - 30px - 460px);
						max-width: 656px;
					}
					form{
						//width: calc( 45% - 30px );
						width: 350px;
						p.submit{
							padding-top: 8px;
						}
						> div{
							//display: flex;
							//align-content: stretch;
							> div{
								&:first-child{
									margin-right: 12px;
								}
								width: 50%;
							}
						}
					}
				}
				&.iloveimg_settings__overview__account-logged{
					.iloveimg_settings__overview__account-logged__column_left{
						flex: 1;
						background-color: #F3F4F5;
						margin-right: 30px;
						padding: 20px 24px;
						min-height: 280px;

						h4{
							margin: 0 0 10px 0;
						}
						display: flex;
						justify-content: space-between;
						
						> div{
							width: 45%;
							@media  (max-width: $width_medium){
								width: 100%;
							}
							&.iloveimg_settings__overview__account-logged__column_left__details{
								position: relative;
								p{
									margin-top: 0;
									@media  (max-width: $width_medium){
										display: none;
									}
								}
								.button{
									position: absolute;
								    right: 0px;
								    bottom: 0;
								    @media  (max-width: $width_medium){
								    	position: static;
								    	margin-top: 20px;
								    }
								}
							}
						}
						@media  (max-width: $width_small){
							width: 100%;
							margin-bottom: 20px;
						}

						@media  (max-width: $width_medium){
							flex-direction: column;
						}
						*{
							color: #626870;
						}
					}
					.iloveimg_settings__overview__account-logged__column_right{
						width: 240px;
						@media  (max-width: $width_small){
							//margin-left: 24px;
						}
						form{
							&.iloveimg_settings__overview__account-logged__column_right-proyects{
								border-top: 1px solid #E1E1E1;
								margin-top: 20px;
								padding-top: 10px;
								label{
									display: block;
									margin-bottom: 5px;
								}
								select, button{
									//margin-bottom: 10px;
								}
							}
						}
					}
				}
			}
		}
		.iloveimg_settings__info{
			background-color: #75A9FF;
			padding: 30px;
			margin-bottom: 30px;
			border-radius: 4px 4px 0px 0px;
			position: relative;
			button{
				position: absolute;
				top: 10px;
				right: 10px;
				display: none;
			}
			h3{
				font-size: 18px;
			}
			*{
				color: #fff;
			}
		}
		.iloveimg_settings__options{
			display: flex;
			@media  (max-width: $width_small){
				flex-direction: column;
			}
			.iloveimg_settings__options-nav{
				margin-right: 30px;
				@media  (max-width: $width_small){
					margin-right: 0;
				}
				ul{
					margin: 0;
					padding: 0;
					list-style: none;
					width: 173px;
					@media  (max-width: $width_small){
						display: flex;
					}
					li{
						margin: 0 0 10px 0;
						a{
							color: #383E45;
							text-decoration: none;
							display: block;
							line-height: 32px;
							height: 32px;
							padding: 0 8px;
							white-space: nowrap;
							display: flex;
							align-items: center;
							border-radius: 2px;
							svg{
								margin-right: 10px;
							}
						}
						&.iloveimg_settings__options-nav__selected,
						&:hover{
							a{
								background-color: #fff;
							}
						}
					}
				}
			}
			.iloveimg_settings__options-container{
				flex: 1;
				background-color: #fff;
				padding: 30px;
				box-shadow: $box_shadow;
				border-radius: $radius;
				h3{
					border-bottom: 1px solid #E1E1E1;
					padding-bottom: 15px;
					margin-bottom: 0px;
				}
				input[type="submit"], input[type="button"]{
					//background-color: #B4B4B4;
					text-shadow: none !important;
					&:disabled{
						opacity: 1;
						background-color: #B4B4B4 !important;
						cursor: not-allowed;
					}
				}
				p.submit{
					margin: 0;
					display: flex;
					align-items: flex-end;
					flex-direction: column;
					button{
						position: relative;
						/*&:before{
							content: '';
						    position: absolute;
						    top: -20px;
						    left: -20px;
						    bottom: -20px;
						    right: -20px;
						    background: inherit;
						    border-radius: 3px;
						    z-index: -1;
						    opacity: 0.4;
						    -webkit-transform: scale3d(0.8, 0.5, 1);
						    transform: scale3d(0.8, 0.5, 1);
						}
						&:hover{
							&:before{
								display: none;
							}
						}
						&.need_saving{
							opacity: .7;
							&:before{
								-webkit-animation: anim-moema-2 1s 1s infinite;
	    						animation: anim-moema-2 1s 1s infinite;
							}
						}*/
					}
				}
				form{
					> p.submit{
						margin-bottom: 20px;
					}
				}
				.iloveimg_settings__options__field-backup{
					display: flex;
					justify-content: space-between;
					@media  (max-width: $width_medium){
						flex-direction: column;
					}
					.iloveimg_settings__options__field{
						width: 50%;
						border: 0;
						@media  (max-width: $width_medium){
							width: 100%;
						}
					}
					button.button{
						+ span{
							display: inline-block;
						    margin-top: 8px;
						    margin-left: 6px;
						    font-style: italic;
						}
					}
				}
				.iloveimg_settings__options__field{
					padding: 30px 0;
					border-bottom: 1px solid #E1E1E1;
					.switch + label{
						margin-left: 5px;
					}
					p{
						color: #868c94;
					}
					.iloveimg_settings__options__field__imagessizes{
						display: flex;
						> *{
							width: calc(50% - 30px);
							&:first-child{
								margin-right: 30px;
							}
						}
					}
					.iloveimg_settings__options__field__resize{
						display: flex;
						div{
							margin-right: 20px;
							width: 170px;
							label{
								display: block;
								margin-bottom: 5px;
							}
							input{
								width: 100%;
								border: 1px solid #383E45;
								background-color: #fff;
							}
							p{
								margin-top: 5px;
								font-size: 10px;
								color: #383E45;
								letter-spacing: 0.35px;
								line-height: 13px;
							}
						}
					}
				}
			}
		}

		.iloveimg-restore-dialog {
			border: none;
			border-radius: 20px;
			padding: 40px;
			animation: fade-out 0.2s ease-out;

			.iloveimg-title-dialog {
				text-align: center;
				font-size: 2.8em;
				color: $primary_color;
			}

			.iloveimg-content-dialog {
				font-size: 18px;
				font-weight: 500;
				color: #838383;
			}

			.iloveimg-btn-groups {
				margin-top: 30px;
				display: flex;
				justify-content: center;
				gap: 30px;

				.button-primary {
					font-size: 14px;
					line-height: auto;
					height: auto;
					width: auto;
					background-color: #4d90fe;
					color: #fff;
					border: 0;
					position: relative;
					overflow: hidden;
				}
			}

			&::backdrop {
				background-color: rgba(56,56,56,0.75);
			}

			&[open] {
				animation: openDialog 300ms ease-in-out 0s 1 normal forwards;
			}
		}
	}
}
body{
	a.thickbox.iloveimg_sizes_compressed, a.iloveimg_link{
		color: #626870;
		text-decoration: underline;
		&:hover{
			color: $primary_color;
		}
	}

	.iloveimg_status_watermark .iloveimg-restore-dialog,
	#poststuff .iloveimg-restore-dialog {
		border: none;
		border-radius: 20px;
		padding: 40px;
		animation: fade-out 0.2s ease-out;

		.iloveimg-title-dialog {
			text-align: center;
			font-size: 2.8em;
			color: $primary_color;
		}

		.iloveimg-content-dialog {
			font-size: 18px;
			font-weight: 500;
			color: #838383;
		}

		.iloveimg-btn-groups {
			margin-top: 30px;
			display: flex;
			justify-content: center;
			gap: 30px;

			.button-primary {
				font-size: 14px;
				line-height: auto;
				height: auto;
				width: auto;
				background-color: #4d90fe;
				color: #fff;
				border: 0;
				position: relative;
				overflow: hidden;
			}
		}

		&::backdrop {
			background-color: rgba(56,56,56,0.75);
		}

		&[open] {
			animation: openDialog 300ms ease-in-out 0s 1 normal forwards;
		}
	}
}

/* Animation keyframes */
@keyframes openDialog {
	0% {
		opacity: 0;
		transform: scale(0.6);
	}

	100% {
		opacity: 1;
		transform: scale(1);
	}
}

